<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cvt2world</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jeewonkim@todo.todo">jeewonkim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
